--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
+  min-height: 100vh; /* 화면 전체 높이 차지 */
+  max-width: 480px; /* 최대 너비를 480px로 설정 */
+  width: 100%; /* 너비를 100%로 설정하여 화면 크기에 맞추되 최대 너비를 적용 */
+  margin: 0 auto; /* 화면 중앙에 위치하게끔 설정 */
+  padding: 10px; /* 적절한 여백 추가 */
+  box-sizing: border-box; /* 패딩과 보더를 포함한 크기 계산 */
+}
+
+.header, .footer {
+  /* Header와 Footer를 상하로 배치 */
+}
+
+.content {
+  flex: 1; /* 콘텐츠 영역이 남는 공간을 차지하도록 설정 */
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column; /* 버튼과 텍스트를 수직으로 배치 */
+  padding: 20px;
+}
+
+.btn {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: blue;
+  border-radius: 5px;
+  border: none;
+  padding: 15px;
+  min-height: 30px; 
+  min-width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
